# CT2Rep

./: .gitignore  README.md  a.txt  b.txt  compare_nii_npz.py  download_CTRATE.py  job.sh  job_multi.sh  job_single.sh  pyproject.toml  train.sh  train_apptainer.sh
CT2Rep/: config_valid_only.yaml  main.py
CT2Rep/models/: ct2rep.py
CT2Rep/modules/: data_ct.py  dataloaders.py  datasets.py  encoder_decoder.py  tokenizers.py  trainer.py  visual_extractor.py
CT2RepLong/: main.py
CT2RepLong/models/: ct2rep_long.py
CT2RepLong/modules/: data_ct.py  dataloaders.py  tokenizers.py  visual_extractor.py
CTScanGaze/: LICENSE  README.md  requirements.txt
CTScanGaze/bash/: train_no_semi.sh  train_semi.sh
CTScanGaze/src/: opts.py  test.py  train.py  train_no_semi.py
CTScanGaze/src/models/: gazeformer.py  loss.py  models.py  positional_encodings.py  sampling.py
CTScanGaze/src/utils/: checkpointing.py  config.py  evaluation.py  logger.py  recording.py
CTScanGaze/src/utils/evaltools/: multimatch_3dgaze.py  scanmatch.py  scanmatch3d.py  visual_attention_metrics.py
ctvit/: setup.py
ctvit/ctvit/: ctvit.py
example_download_script/: .gitignore  convert_data_npz.py  download_only_train_data.py  download_only_valid_data.py  merge_to_xlsx.py  valid_failed.txt  valid_labels_nofailed.csv
